[package]
name = "solana-player-wallet"
version = "0.1.0"
edition = "2021"
description = "Solana program for player wallet management"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"
thiserror = "1.0.40"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.28.0", features = ["full"] }
